# SMDG

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  USAGE.md
examples/: example_bundle.json  example_patient.json
fhir_generator/: __init__.py  __main__.py  cli.py  main.py
fhir_generator/generators/: allergy.py  condition.py  diagnostic_report.py  encounter.py  medication.py  observation.py  patient.py  procedure.py  utils.py
fhir_generator/validators/: fhir_validator.py
tests/: test_cli.py  test_observation.py  test_patient.py  test_validator.py
